# FarmaSimulator

./: .gitignore  CMakeLists.txt  README-wasm.md  README.md  deploy.bat
.github/workflows/: tests.yml  wasm.yml
build_test/: .ninja_deps  .ninja_log  FarmaciaSim.exe.manifest  build.ninja  farmaciasim_datos.json  farmaciasim_qmltyperegistrations.cpp
build_test/.qt/: .qmlls.build.ini  .qmlls.build.ini.part  FarmaciaSim_qml.cmake  FarmaciaSim_res.cmake  QtDeploySupport.cmake  QtDeployTargets.cmake
build_test/.qt/deploy_qml_imports/: FarmaciaSim.cmake
build_test/.qt/qml_imports/: FarmaciaSim_build.cmake  FarmaciaSim_build.rsp  FarmaciaSim_conf.cmake  FarmaciaSim_conf.rsp
build_test/.qt/rcc/: FarmaciaSim_raw_qml_0.qrc  FarmaciaSim_raw_res_0.qrc  qmake_FarmaciaSim.qrc  qrc_FarmaciaSim_raw_qml_0.cpp  qrc_FarmaciaSim_raw_res_0.cpp  qrc_qmake_FarmaciaSim.cpp
build_test/.rcc/qmlcache/: FarmaciaSim_qml_loader_file_list.rsp  FarmaciaSim_qmlcache_loader.cpp  all_aotstats.aotstatslist  module_FarmaciaSim.aotstatslist
build_test/.rcc/qmlcache/FarmaciaSim_qml/: AmortView_qml.cpp  AmortView_qml.cpp.aotstats  AnalisisView_qml.cpp  AnalisisView_qml.cpp.aotstats  DatosBaseView_qml.cpp  DatosBaseView_qml.cpp.aotstats  FinanciacionView_qml.cpp  FinanciacionView_qml.cpp.aotstats  Fmt_qml.cpp  Fmt_qml.cpp.aotstats  ImpuestosView_qml.cpp  ImpuestosView_qml.cpp.aotstats  KeyboardAvoider_qml.cpp  KeyboardAvoider_qml.cpp.aotstats  Main_qml.cpp  Main_qml.cpp.aotstats  MoneyField_qml.cpp  MoneyField_qml.cpp.aotstats  NavPanel_qml.cpp  NavPanel_qml.cpp.aotstats  Nav_qml.cpp  Nav_qml.cpp.aotstats  NumField_qml.cpp  NumField_qml.cpp.aotstats  PctField_qml.cpp  PctField_qml.cpp.aotstats  PersonalView_qml.cpp  PersonalView_qml.cpp.aotstats  ProyeccionView_qml.cpp  ProyeccionView_qml.cpp.aotstats  SectionTitle_qml.cpp  SectionTitle_qml.cpp.aotstats
build_test/.rcc/qmllint/: FarmaciaSim.rsp  FarmaciaSim_json.rsp  FarmaciaSim_module.rsp
build_test/FarmaciaSim/: FarmaciaSim.qmltypes  FarmaciaSim_qml_module_dir_map.qrc  qmldir
build_test/FarmaciaSim/qml/: AmortView.qml  AnalisisView.qml  DatosBaseView.qml  FinanciacionView.qml  Fmt.qml  ImpuestosView.qml  Main.qml  Nav.qml  NumField.qml  PersonalView.qml  ProyeccionView.qml
build_test/FarmaciaSim_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_test/FarmaciaSim_autogen/UVLADIE3JM/: moc_amortmodel.cpp  moc_amortmodel.cpp.d  moc_amortmodel.cpp.json  moc_engine.cpp  moc_engine.cpp.d  moc_engine.cpp.json
build_test/meta_types/: FarmaciaSim_json_file_list.txt  FarmaciaSim_json_file_list.txt.timestamp  qt6farmaciasim_metatypes.json.gen
build_test/qmltypes/: FarmaciaSim_foreign_types.txt
launcher/: launcher.cpp
packaging/msix/: AppxManifest.xml  README.md  build-msix.ps1
qml/: AmortView.qml  AnalisisView.qml  DatosBaseView.qml  FinanciacionView.qml  Fmt.qml  ImpuestosView.qml  Main.qml  MoneyField.qml  NavPanel.qml  NumField.qml  PctField.qml  PersonalView.qml  ProyeccionView.qml  SectionTitle.qml  SimulacionSimpleView.qml  Tokens.qml  design-tokens.json
qml/components/: Card.qml  CollapsibleCard.qml  ConceptTable.qml  FastWheel.qml  HoursField.qml  KeyboardAvoider.qml  MoneyField.qml  NumField.qml  PctField.qml  ResetGroupButton.qml  RowCard.qml  SectionTitle.qml  YearTable.qml
qml/views/: AmortView.qml  AnalisisView.qml  ComparacionView.qml  ConfiguracionView.qml  DatosBaseView.qml  FinanciacionView.qml  ImpuestosView.qml  PersonalView.qml  ProyeccionView.qml  SimulacionSimpleView.qml  SimulacionView.qml
src/: amortmodel.cpp  amortmodel.h  engine.cpp  engine.h  main.cpp  pdfreport.cpp  pdfreport.h  simcore.cpp  simcore.h
tests/: CMakeLists.txt  qml_test_main.cpp  test_pdfreport.cpp  test_simcore.cpp
tests/qml/: tst_ConceptTable.qml  tst_Fmt.qml  tst_MoneyField.qml  tst_NavPanel.qml  tst_SimulacionView.qml
